@@ -154,6 +154,7 @@ MISC:
  - Move wendzelnntpd.conf into the subdirectory wendzelnntpd together
    with the SSL certificates, so the new default location for
    wendzelnntpd.conf is /usr/local/etc/wendzelnntpd/wendzelnntpd.conf.
+ - Add systemd service unit for wendzelnntpd
 
 2.1.3-stable "Friedrichroda" : 17-Apr-2021:
  As usual, every new release gets named after a nice travel location.
